learned splat comprehension

--- a/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
+++ b/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "## Who Won ?\n",
     "\n",
-    "When implementing Tic Tac Toe the important thing we have to do is figure out who won. Who is the winner? It's the player who has 3 of the players tokens in any tow, column or diagonal. How do we get a row? Well, that's easy, it is just a single index on the board:\n",
+    "When implementing Tic Tac Toe the important thing we have to do is figure out who won. Who is the winner? It's the player who has 3 of the players tokens in any row, column or diagonal. How do we get a row? Well, that's easy, it is just a single index on the board:\n",
     "\n",
     "```python \n",
     "board = [\n",
@@ -136,16 +136,16 @@
     "\n",
     "```\n",
     "\n",
-    "That was easy .. but how do we get the first column, with all three values? You\n",
+    "That was easy... but how do we get the first column, with all three values? You\n",
     "can probably come up with a manual way, but we'll show you the most Pythonic\n",
     "way: you transpose the board and take a row. Transposing a matrix means swapping\n",
-    "rows an columns, so if you transpose, accessing a row will actually get you a\n",
-    "column,  and in Python we can do this with `zip()`\n"
+    "rows and columns, so if you transpose, accessing a row will actually get you a\n",
+    "column, and in Python we can do this with `zip()`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
     "board = [\n",
     "        [1, 2, 3],\n",
     "        [4, 5, 6],\n",
-    "        [7, 8, 9]\n",
+    "        [7, 8, 9] \n",
     "    ]\n",
     "\n",
     "pretty_print_2d(board)\n",
@@ -416,12 +416,12 @@
    "source": [
     "# Text Yourself\n",
     "# In the comprehensions below, replace the ...\n",
-    "# with code that will produce the expected output.\n",
+    "# with code that will produce the expected output. \n",
     "\n",
     "board = [\n",
     "        [1, 2, 3],\n",
     "        [4, 5, 6],\n",
-    "        [7, 8, 9]\n",
+    "        [7, 8, 9] \n",
     "    ]\n",
     "\n",
     "# Uncomment below and replace the ... with code that will produce the expected output.\n",
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -517,11 +517,11 @@
     "print(len(set(x_won)))\n",
     "print(len(set(o_won)))\n",
     "print(len(set(r1)))\n",
-    "print(len(set(r2)))\n",
+    "print(len(set(r2))) \n",
     "\n",
     "print('\\n4 ===')\n",
-    "print(set(x_won) == {'x'})\n",
-    "print(set(o_won) == {'o'})\n",
+    "print(set(x_won) == {'x'}) \n",
+    "print(set(o_won) == {'o'}) \n",
     "print(set(r1) == {'x'})\n",
     "print(set(r2) == {'x'})\n"
    ]
@@ -549,7 +549,7 @@
     "    # x wins in row 1\n",
     "    [\n",
     "        ['o','' ,'o'],\n",
-    "        ['x','x','x'],\n",
+    "        ['x','x','x'],  \n",
     "        ['o','' ,''],\n",
     "    ],\n",
     "    # x wins in col 2\n",
