--- a/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
+++ b/lessons/03_Data_Structures_Func/02_Dicts_Sets.ipynb
@@ -356,7 +356,7 @@
     "\n",
     "* `dict.keys()`: Get only the keys.\n",
     "* `dict.values()`: Get only the values. \n",
-    "* `dict.items()`: Get the keys and values as a collection of tuples. \n"
+    "* `dict.items()`: Get the keys and values as a collection of tuples.\n"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How big is it?\n",
+    "# How much is it?\n",
     "\n",
     "Use `len()` to see how many items are in a collection.\n"
    ]
