--- a/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
+++ b/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
@@ -311,16 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 7]\n",
-      "[2, 5, 8]\n",
-      "[3, 6, 9]\n"
+     "ename": "NameError",
+     "evalue": "name 'board' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m l  \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(e) \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[43mboard\u001b[49m)] \n\u001b[1;32m      2\u001b[0m pretty_print_2d(l)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'board' is not defined"
      ]
     }
    ],
@@ -415,7 +417,7 @@
    "outputs": [],
    "source": [
     "# Text Yourself\n",
-    "# In the comprehensions below, replace the ...\n",
+    "# In the comprehensions below, replace the ... \n",
     "# with code that will produce the expected output. \n",
     "\n",
     "board = [\n",
@@ -541,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
