--- a/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
+++ b/lessons/03_Data_Structures_Func/05_Splat_Comprehension.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -273,18 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'board' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# First transpose:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m t \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[43mboard\u001b[49m)\n\u001b[1;32m      4\u001b[0m l \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# convert each row from tuple to list\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'board' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 7]\n",
+      "[2, 5, 8]\n",
+      "[3, 6, 9]\n"
      ]
     }
    ],
@@ -311,22 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'board' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m l  \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28mlist\u001b[39m(e) \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(\u001b[38;5;241m*\u001b[39m\u001b[43mboard\u001b[49m)] \n\u001b[1;32m      2\u001b[0m pretty_print_2d(l)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'board' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 7]\n",
+      "[2, 5, 8]\n",
+      "[3, 6, 9]\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "board = [\n",
+    "        [1, 2, 3],\n",
+    "        [4, 5, 6],\n",
+    "        [7, 8, 9] \n",
+    "    ]\n",
+    "\n",
     "l  = [list(e) for e in zip(*board)] \n",
     "pretty_print_2d(l)"
    ]
@@ -412,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -478,8 +481,8 @@
       "2 ===\n",
       "{'x'}\n",
       "{'o'}\n",
-      "{'o', 'x'}\n",
-      "{'o', 'x'}\n",
+      "{'x', 'o'}\n",
+      "{'x', 'o'}\n",
       "\n",
       "3 ===\n",
       "1\n",
@@ -543,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +687,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final Test\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# If all of your functions are working this code should pass:\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m x_wins_boards ] )\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m o_wins_boards ] )\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m no_winner_boards ] )\n",
+      "Cell \u001b[0;32mIn[125], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final Test\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# If all of your functions are working this code should pass:\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m x_wins_boards ] )\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m o_wins_boards ] )\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mall\u001b[39m([ check_board(board) \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01mfor\u001b[39;00m board \u001b[38;5;129;01min\u001b[39;00m no_winner_boards ] )\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -709,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
